se corrigen comentarios para autogeneración de codigo para generar documentación swagger
